---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: return_type.md - Function return type - Generator functions - Asynchronous
mdtest path: crates/ty_python_semantic/resources/mdtest/function/return_type.md
---

# Python source files

## mdtest_snippet.py

```
 1 | import types
 2 | import typing
 3 | 
 4 | async def f() -> types.AsyncGeneratorType[int, None]:
 5 |     yield 42
 6 | 
 7 | async def g() -> typing.AsyncGenerator[int]:
 8 |     yield 42
 9 | 
10 | async def h() -> typing.AsyncIterator[int]:
11 |     yield 42
12 | 
13 | async def i() -> typing.AsyncIterable[int]:
14 |     yield 42
15 | 
16 | async def j() -> str:  # error: [invalid-return-type]
17 |     yield 42
18 | 
19 | async def k() -> typing.AsyncGenerator[int]:
20 |     yield 42
21 |     return 2  # error: [invalid-syntax] "`return` with value in async generator"
```

# Diagnostics

```
error[invalid-return-type]: Return type does not match returned value
  --> src/mdtest_snippet.py:16:18
   |
16 | async def j() -> str:  # error: [invalid-return-type]
   |                  ^^^ expected `str`, found `types.AsyncGeneratorType`
   |
info: Function is inferred as returning `types.AsyncGeneratorType` because it is an async generator function
info: See https://docs.python.org/3/glossary.html#term-asynchronous-generator for more details

```

```
error[invalid-syntax]: `return` with value in async generator
  --> src/mdtest_snippet.py:21:5
   |
21 |     return 2  # error: [invalid-syntax] "`return` with value in async generator"
   |     ^^^^^^^^

```
